# metaphrase

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  test-database.sqlite
migrations/20161029110638_create_translations/: down.sql  up.sql
migrations/20161123185148_create_users/: up.sql
migrations/20161204180227_create_sessions/: up.sql
migrations/20170122162533_create_settings/: up.sql
migrations/20220617135624_create_main_tables/: up.sql
src/: api.rs  database.rs  errors.rs  lib.rs  logger.rs  main.rs  models.rs  schema.rs
src/api/: mod.rs  v1.rs
src/api/middleware/: mod.rs
src/api/v1/: common.rs  configuration.rs  mod.rs  router.rs  sessions.rs  translations.rs  users.rs
src/authentication/: middleware.rs  mod.rs
src/frontend/: brunch-config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/app/: initialize.js  main.css  start.js  store.js
src/frontend/app/assets/: index.html
src/frontend/app/components/: app.vue  collection-toolbar.vue  flag.vue  login-prompt.vue  navigation-bar.vue  navigation-key.vue  toolbar.vue  translation-group.vue  translation-key.vue  translation-locale.vue
src/frontend/public/: app.css  app.css.map  app.js  app.js.map  index.html  vendor.js  vendor.js.map
src/frontend/src/: App.vue  index.css  main.js  router.js  store.js
src/linter/: mod.rs
src/linter/filters/: curly_apostrophe_filter.rs  ellipsis_symbol_filter.rs  mod.rs  no_space_before_comma_filter.rs  space_before_double_ponctuation_filter.rs
tests/: fixtures.sql  tests.rs
tests/api/: v1.rs
tests/api/v1/: common.rs  configuration.rs  mod.rs  sessions.rs  translations.rs  users.rs
tools/: build.sh  install.sh  quick-import.rb  test.sh
(+39 files in other folders)
