[package]
name = "lugh"
version = "0.2.0"
authors = ["Raphaël Lustin <raphael@lustin.fr>", "Stanislas Signoud <signez@stanisoft.net>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
log = "0.4"
pwhash = "0.3"
rand = "0.7"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typographic_linter = "0.2"
simplelog = "0.7"
time = "0.2"
tokio = { version = "0.2", features = ["full"] }
actix-web = "3"
actix-files = "0.5"
futures-util = "0.3"
actix-service = "1"
actix-web-httpauth = "0.5"
actix-rt = "2"