[package]
name = "metaphrase"
version = "0.2.0"
authors = ["Raphaël Lustin <raphael@lustin.fr>", "Stanislas Signoud <signez@stanisoft.net>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
log = "0.4"
pwhash = "1.0"
rand = "0.8"
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typographic_linter = "0.2"
simplelog = "0.12"
time = "0.3"
tokio = { version = "1.19", features = ["full"] }
actix-web = "4"
actix-files = "0.6"
futures-util = "0.3"
actix-service = "2"
actix-web-httpauth = "0.6"
actix-rt = "2"
